# thermoroute-water-temperature

./: .gitignore  .zenodo.json  LICENSE  README.md  pyproject.toml  requirements-lock-py312-hashed.txt  requirements-lock.txt  requirements.txt
_archive_wip/: usgs_experiment_wip.md  usgs_scores_wip.csv
data/: b1.csv  p3.csv  s2.csv
data_usgs/: development_environmental_audit_v1.json  development_predictor_bridge_v1.json  frozen_panel_v1.json  huc_metadata_usgs_v1.csv  huc_metadata_usgs_v1.provenance.json  rejected_sites_120v2.csv  rejected_sites_120v2_corrections_v1.json  station_registry_v1.csv  stations_meta.csv  stations_meta_120v2.csv
outputs/: README.md  manifest.json
paper/: ThermoRoute_paper.docx  ThermoRoute_paper.md  cover_letter.docx  cover_letter.md  highlights.docx  highlights.md  references.bib
protocols/: route_a_claim_registry_v1.json  route_a_confirmatory_protocol.md  route_a_confirmatory_v1.json  route_a_inference_amendment_v1.json  route_a_outcome_qc_policy_v1.json  route_a_protocol_seal_v1.json  route_a_temporal_coverage_policy_v1.json
scripts/: 01_prepare_data.py  04_run_experiments.py  05_explain.py  06_make_figures.py  07_make_tables.py  08_decision_value.py  09_usgs_experiment.py  09b_development_controls.py  10_usgs_analysis.py  11_retune.py  12_claim_stats.py  13_rigor.py  13b_ablation_worker.py  13c_region_transfer.py  14_manifest.py  15_stratified.py  16_lstm_baseline.py  17_prop1_binding.py  18_rev_curve.py  19_probabilistic.py  20_tuurt.py  21_ecological_thresholds.py  22_adaptive_conformal.py  23_robustness.py  24_confirmatory_opening.py  24_freeze_model_suite.py  25_train_external_pooled_suite.py  26_validate_claims.py  27_verify_development_replay.py  28_freeze_prelabel_chronology.py  (+14 more)
(+414 files in other folders)
