[build-system]
requires = ["setuptools==81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermoroute"
version = "1.0.0"
description = "Audited retrospective multi-station river water-temperature hindcasting benchmark"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "ThermoRoute study" }]
dependencies = [
    "numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "scikit-learn>=1.3",
    "lightgbm>=4.0", "torch>=2.1", "matplotlib>=3.7", "statsmodels>=0.14",
    "pyarrow>=12.0", "dataretrieval>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
